--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -19,8 +19,9 @@
   position: relative;
   margin-top: 100px;
 
-  &__card{
+  &__card {
     transform: scale(0);
+    transition: all 1s ease;
   }
 
   &:hover .contact-map__card {
@@ -42,10 +43,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-//   transform: scale(0);
+  //   transform: scale(0);
   transition: all 0.5s ease-in-out;
-
-
 
   &-text {
     font-size: 20px;
@@ -166,10 +165,9 @@
         width: 100%;
         height: 100%;
         margin-top: 10px;
-        box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.2);
         border-radius: 10px;
         border: none;
-        padding:15px;
+        padding: 15px;
         outline: none;
         resize: none;
       }
@@ -186,7 +184,7 @@
         font-weight: 700;
         border: none;
         border-radius: 10px;
-        background: #01A1B7;
+        background: #01a1b7;
         color: #ffffff;
       }
 
@@ -194,10 +192,11 @@
         border: 2px solid #000;
         padding: 5px;
         font-size: 12px;
+        border-radius: 10px;
 
-        label{
-            font-size: 16px;
-            font-weight: 700;
+        label {
+          font-size: 16px;
+          font-weight: 700;
         }
 
         input {
