--- a/css/about-us-page.css
+++ b/css/about-us-page.css
@@ -39,9 +39,13 @@ a {
   cursor: pointer;
 }
 .header-contact {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
   color: #01a1b7;
+  margin-right: 50px;
+}
+.header-contact p {
+  margin-top: 10px;
 }
 .header-buttons a {
   margin-left: 5px;
@@ -55,7 +59,7 @@ a {
 .header-links__wrapper {
   width: 100%;
   background-color: #ffffff;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
 .header-links {
@@ -75,6 +79,9 @@ a {
   font-size: 18px;
   font-weight: 500;
 }
+.header-links .navigation-links li a {
+  padding-bottom: 5px;
+}
 .header-links .navigation-links li:hover a {
   font-weight: 600;
   color: #01a1b7;
@@ -82,17 +89,8 @@ a {
 .header-links .navigation-links li:first-child {
   margin-left: 0;
 }
-.header-links .navigation-links li::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 10px;
-  width: 0;
-  height: 3px;
-  background: #f4c93f;
-}
-.header-links .navigation-links li.active li::before {
-  width: 10px;
+.header-links .navigation-links li .active {
+  border-bottom: 3px solid #f4c93f;
 }
 .header-links .navigation-input {
   position: relative;
@@ -133,6 +131,7 @@ a {
   bottom: 0;
   right: 0;
   width: 500px;
+  pointer-events: none;
 }
 
 .footer {
@@ -187,6 +186,7 @@ a {
 }
 .footer-specialists__links {
   margin-top: 30px;
+  padding: 5px;
 }
 .footer-specialists__links a {
   line-height: 25px;
@@ -434,8 +434,30 @@ a {
   font-size: 32px;
   font-weight: 700;
 }
-.gallery .place-for__pagination {
+.gallery .place-for-pagination {
   margin-top: 50px;
+  display: flex;
+  align-items: center;
+  color: #000000;
+  cursor: pointer;
+}
+.gallery .place-for-pagination svg path {
+  stroke: #000000;
+}
+.gallery .place-for-pagination p {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  font-weight: 500;
+}
+.gallery .place-for-pagination .line {
+  display: block;
+  width: 200px;
+  height: 2px;
+  background: #000000;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .gallery-images {
@@ -523,6 +545,28 @@ a {
   font-weight: 500;
   line-height: 22px;
 }
-.recomendation .place-for__pagination {
+.recomendation .place-for-pagination {
   margin-top: 50px;
+  display: flex;
+  align-items: center;
+  color: #000000;
+  cursor: pointer;
+}
+.recomendation .place-for-pagination svg path {
+  stroke: #000000;
+}
+.recomendation .place-for-pagination p {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  font-weight: 500;
+}
+.recomendation .place-for-pagination .line {
+  display: block;
+  width: 200px;
+  height: 2px;
+  background: #000000;
+  margin-left: 15px;
+  margin-right: 15px;
 }/*# sourceMappingURL=about-us-page.css.map */
