--- a/css/contact.css
+++ b/css/contact.css
@@ -39,9 +39,13 @@ a {
   cursor: pointer;
 }
 .header-contact {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
   color: #01a1b7;
+  margin-right: 50px;
+}
+.header-contact p {
+  margin-top: 10px;
 }
 .header-buttons a {
   margin-left: 5px;
@@ -55,7 +59,7 @@ a {
 .header-links__wrapper {
   width: 100%;
   background-color: #ffffff;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
 .header-links {
@@ -75,6 +79,9 @@ a {
   font-size: 18px;
   font-weight: 500;
 }
+.header-links .navigation-links li a {
+  padding-bottom: 5px;
+}
 .header-links .navigation-links li:hover a {
   font-weight: 600;
   color: #01a1b7;
@@ -82,17 +89,8 @@ a {
 .header-links .navigation-links li:first-child {
   margin-left: 0;
 }
-.header-links .navigation-links li::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 10px;
-  width: 0;
-  height: 3px;
-  background: #f4c93f;
-}
-.header-links .navigation-links li.active li::before {
-  width: 10px;
+.header-links .navigation-links li .active {
+  border-bottom: 3px solid #f4c93f;
 }
 .header-links .navigation-input {
   position: relative;
@@ -133,6 +131,7 @@ a {
   bottom: 0;
   right: 0;
   width: 500px;
+  pointer-events: none;
 }
 
 .footer {
@@ -187,6 +186,7 @@ a {
 }
 .footer-specialists__links {
   margin-top: 30px;
+  padding: 5px;
 }
 .footer-specialists__links a {
   line-height: 25px;
@@ -263,6 +263,7 @@ a {
 }
 .contact-map__card {
   transform: scale(0);
+  transition: all 1s ease;
 }
 .contact-map:hover .contact-map__card {
   transform: translateY(-450px) scale(1);
@@ -383,7 +384,6 @@ a {
   width: 100%;
   height: 100%;
   margin-top: 10px;
-  box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   border: none;
   padding: 15px;
@@ -401,13 +401,14 @@ a {
   font-weight: 700;
   border: none;
   border-radius: 10px;
-  background: #01A1B7;
+  background: #01a1b7;
   color: #ffffff;
 }
 .contact-form .form-buttons .form-file {
   border: 2px solid #000;
   padding: 5px;
   font-size: 12px;
+  border-radius: 10px;
 }
 .contact-form .form-buttons .form-file label {
   font-size: 16px;
