--- a/css/cooperation.css
+++ b/css/cooperation.css
@@ -39,9 +39,13 @@ a {
   cursor: pointer;
 }
 .header-contact {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
   color: #01a1b7;
+  margin-right: 50px;
+}
+.header-contact p {
+  margin-top: 10px;
 }
 .header-buttons a {
   margin-left: 5px;
@@ -55,7 +59,7 @@ a {
 .header-links__wrapper {
   width: 100%;
   background-color: #ffffff;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
 .header-links {
@@ -75,6 +79,9 @@ a {
   font-size: 18px;
   font-weight: 500;
 }
+.header-links .navigation-links li a {
+  padding-bottom: 5px;
+}
 .header-links .navigation-links li:hover a {
   font-weight: 600;
   color: #01a1b7;
@@ -82,17 +89,8 @@ a {
 .header-links .navigation-links li:first-child {
   margin-left: 0;
 }
-.header-links .navigation-links li::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 10px;
-  width: 0;
-  height: 3px;
-  background: #f4c93f;
-}
-.header-links .navigation-links li.active li::before {
-  width: 10px;
+.header-links .navigation-links li .active {
+  border-bottom: 3px solid #f4c93f;
 }
 .header-links .navigation-input {
   position: relative;
@@ -133,6 +131,7 @@ a {
   bottom: 0;
   right: 0;
   width: 500px;
+  pointer-events: none;
 }
 
 .footer {
@@ -187,6 +186,7 @@ a {
 }
 .footer-specialists__links {
   margin-top: 30px;
+  padding: 5px;
 }
 .footer-specialists__links a {
   line-height: 25px;
@@ -314,6 +314,7 @@ a {
   padding: 15px;
   outline: none;
   resize: none;
+  opacity: 0.7;
 }
 .cooperation-form .form-input input {
   margin-top: 10px;
@@ -381,4 +382,26 @@ a {
 }
 .licenses .place-for-pagination {
   margin-top: 50px;
+  display: flex;
+  align-items: center;
+  color: #000000;
+  cursor: pointer;
+}
+.licenses .place-for-pagination svg path {
+  stroke: #000000;
+}
+.licenses .place-for-pagination p {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  font-weight: 500;
+}
+.licenses .place-for-pagination .line {
+  display: block;
+  width: 200px;
+  height: 2px;
+  background: #000000;
+  margin-left: 15px;
+  margin-right: 15px;
 }/*# sourceMappingURL=cooperation.css.map */
