--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -8,6 +8,7 @@
     bottom: 0;
     right: 0;
     width: 500px;
+    pointer-events: none;
   }
 }
 
@@ -75,6 +76,7 @@
 
     &__links {
       margin-top: 30px;
+      padding: 5px;
       a {
         line-height: 25px;
         color: rgba(255, 255, 255, 0.7);
