--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -14,9 +14,14 @@
   }
 
   &-contact {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
     color: #01a1b7;
+    margin-right: 50px;
+
+    p {
+      margin-top: 10px;
+    }
   }
 
   &-buttons {
@@ -34,7 +39,7 @@
 .header-links__wrapper {
   width: 100%;
   background-color: #ffffff;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
 .header-links {
@@ -54,6 +59,10 @@
       font-size: 18px;
       font-weight: 500;
 
+      a {
+        padding-bottom: 5px;
+      }
+
       &:hover a {
         font-weight: 600;
         color: #01a1b7;
@@ -63,18 +72,8 @@
         margin-left: 0;
       }
 
-      &::before {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 10px;
-        width: 0;
-        height: 3px;
-        background: #f4c93f;
-      }
-
-      &.active li::before{
-        width: 10px;
+      .active{
+        border-bottom: 3px solid #f4c93f;
       }
     }
   }
