--- a/scss/about-us-page.scss
+++ b/scss/about-us-page.scss
@@ -226,8 +226,33 @@
     font-weight: 700;
   }
 
-  .place-for__pagination {
+  .place-for-pagination {
     margin-top: 50px;
+    display: flex;
+    align-items: center;
+    color: #000000;
+    cursor: pointer;
+
+    svg path {
+      stroke: #000000;
+    }
+
+    p {
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      font-size: 24px;
+      font-weight: 500;
+    }
+
+    .line {
+      display: block;
+      width: 200px;
+      height: 2px;
+      background: #000000;
+      margin-left: 15px;
+      margin-right: 15px;
+    }
   }
 }
 
@@ -331,7 +356,32 @@
     }
   }
 
-  .place-for__pagination {
+  .place-for-pagination {
     margin-top: 50px;
+    display: flex;
+    align-items: center;
+    color: #000000;
+    cursor: pointer;
+
+    svg path {
+      stroke: #000000;
+    }
+
+    p {
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      font-size: 24px;
+      font-weight: 500;
+    }
+
+    .line {
+      display: block;
+      width: 200px;
+      height: 2px;
+      background: #000000;
+      margin-left: 15px;
+      margin-right: 15px;
+    }
   }
 }
