--- a/scss/cooperation.scss
+++ b/scss/cooperation.scss
@@ -74,9 +74,10 @@
           box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.2);
           border-radius: 10px;
           border: none;
-          padding:15px;
+          padding: 15px;
           outline: none;
           resize: none;
+          opacity: 0.7;
         }
       }
 
@@ -156,5 +157,30 @@
 
   .place-for-pagination {
     margin-top: 50px;
+    display: flex;
+    align-items: center;
+    color: #000000;
+    cursor: pointer;
+
+    svg path {
+      stroke: #000000;
+    }
+
+    p {
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      font-size: 24px;
+      font-weight: 500;
+    }
+
+    .line {
+      display: block;
+      width: 200px;
+      height: 2px;
+      background: #000000;
+      margin-left: 15px;
+      margin-right: 15px;
+    }
   }
 }
