--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -34,8 +34,27 @@
     justify-content: space-between;
 
     .place-for-pagination {
-      width: 40%;
+      display: flex;
+      align-items: center;
       color: #ffffff;
+      cursor: pointer;
+
+      p {
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        font-size: 24px;
+        font-weight: 500;
+      }
+
+      .line {
+        display: block;
+        width: 200px;
+        height: 3px;
+        background: #ffffff;
+        margin-left: 15px;
+        margin-right: 15px;
+      }
     }
 
     &__img {
@@ -97,15 +116,16 @@
     justify-content: space-between;
 
     .card-wrapper {
-      width: 260px;
-      height: 130px;
+      width: 300px;
+      height: 150px;
       display: flex;
       align-items: center;
       justify-content: space-evenly;
       border-radius: 10px;
       background-color: #f4f4f4;
       margin-top: 30px;
-      transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-out;
+      cursor: pointer;
 
       svg {
         width: 70px;
@@ -118,12 +138,12 @@
         font-weight: 700;
       }
 
-      &:hover{
+      &:hover {
         background-color: #01a1b7;
         color: #ffffff;
       }
 
-      &:hover svg path{
+      &:hover svg path {
         fill: #ffffff;
       }
     }
@@ -138,7 +158,7 @@
   .specialists {
     &-text {
       margin-top: 20px;
-      font-size: 20px;
+      font-size: 24px;
       color: rgba(0, 0, 0, 0.5);
     }
 
@@ -147,8 +167,10 @@
       font-size: 20px;
 
       li {
+        font-size: 24px;
         font-weight: 500;
         line-height: 37px;
+        cursor: pointer;
       }
     }
   }
@@ -262,6 +284,31 @@
 
   .place-for-pagination {
     margin-top: 50px;
+    display: flex;
+    align-items: center;
+    color: #000000;
+    cursor: pointer;
+
+    svg path{
+      stroke: #000000;
+    }
+
+    p {
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      font-size: 24px;
+      font-weight: 500;
+    }
+
+    .line {
+      display: block;
+      width: 200px;
+      height: 2px;
+      background: #000000;
+      margin-left: 15px;
+      margin-right: 15px;
+    }
   }
 }
 
